--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -42,7 +42,7 @@ jobs:
         run: npm ci --ignore-scripts
       - name: Build
         run: npm run build --if-present
-      
+
       # Setup pages
       - name: Setup Pages
         uses: actions/configure-pages@v3
@@ -50,7 +50,7 @@ jobs:
         uses: actions/upload-pages-artifact@v1
         with:
           # Upload entire repository
-          path: './dist'
+          path: "./docs"
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
